[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/objects/GameBullet.gd" type="Script" id=1]

[node name="GameBullet" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 282
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
